# invoker-switch

./: .gitignore  README.md  SyncInvoker详细实现文档.md  pyproject.toml  并发控制基础模型设计报告.md
src/invoker_switch/: __init__.py  detection.py  executor.py  invoker.py  loop.py  meta.py  types.py  utils.py
tests/: conftest.py  test_basic.py  test_detection.py  test_event_loop_manager.py  test_executor.py  test_external_loop.py  test_invoker.py  test_meta.py  test_performance.py  test_reentrant.py  test_rpc_meta.py  test_smart_call.py  test_types.py
