[project]
name = "invoker-switch"
version = "0.1.0"
description = "SyncInvoker — 统一同步/异步执行器，透明桥接同步与异步调用"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "typing-extensions>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invoker_switch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
